# supermarket_cost

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
docs/: about_ncm.txt  padrao_url_nfe.txt  querys.sql
notebooks/: nb_nfe.ipynb  nb_nfe_compras.ipynb  nfe_v0.ipynb  request_http.ipynb  web_scraping_test.ipynb
